--- a/web.html/aboutme.html
+++ b/web.html/aboutme.html
@@ -1,13 +1,58 @@
 <html> 
     <head><title>About me </title></head>
+
+    <style>
+        * {
+              margin: 0;
+              padding: 0;
+          }
+          body {
+           background-image: url('images/image.png');
+           height: 100vh;
+           width: 100%;
+           background-size: cover;
+           background-position: center;
+           background-repeat: no-repeat;
+          }
+  
+          ul {
+              float: right;
+              list-style-type: none;
+              margin: 0;
+              padding: 0;
+              overflow: hidden;
+              position:absolute;
+              right: 0;
+              top: 10px;
+          }
+  
+          li {
+              float: left;
+          }
+  
+          li a {
+              display: block;
+              color: white;
+              text-align: center;
+              padding: 14px 16px;
+              text-decoration: none;
+          }
+  
+          li a:hover:not(.active) {
+              color: #FF6600;
+          }
+
+</style>
     <body> 
-        <h1>About me</h1>
-        <a href = "home.html" title="homepage link">HOME</a>
-        <a href = "aboutme.html"target= "_blank">ABOUT ME</a>
-        <a href = "playlist.html"target="_blank">PLAYLIST</a>
+       
+        <ul>
 
-
-
+        <li><a href = "home.html" title="homepage link">HOME</a></li>
+        <li><a href = "aboutme.html"target= "_blank">ABOUT ME</a></li>
+        <li><a href = "playlist.html"target="_blank">PLAYLIST</a></li>
+     
+        </ul>
+ 
 
 
     </body>
