--- a/web.html/home.html
+++ b/web.html/home.html
@@ -12,7 +12,7 @@
 
       body {
            background-image: url('images/cover.png');
-           height: 100% ;
+           height: 100vh;
            width: 100%;
            background-size: cover;
            background-position: center;
@@ -26,6 +26,9 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            position:absolute;
+            right: 0;
+            top: 10px;
         }
 
         li {
@@ -34,7 +37,7 @@
 
         li a {
             display: block;
-            color: black;
+            color: white;
             text-align: center;
             padding: 14px 16px;
             text-decoration: none;
